use node-stdlib-browser plugin to replace node deps with browser impls
Co-authored-by: toastal toastal@posteo.net

--- a/src/package.json
+++ b/src/package.json
@@ -4,9 +4,8 @@
   "description": "TODO",
   "private": true,
   "dependencies": {
-    "path-browserify": "1.0.1"
-  },
-  "browser": {
-    "path": "path-browserify"
+    "crypto-js": "4.0.0",
+    "request": "2.88.0",
+    "stream-http": "3.2.0"
   }
 }
